# Sannel.Bots.Pear

./: README.md  Sannel.Bots.Pear.sln
src/Sannel.Bots.Pear/: appsettings.Development.json  appsettings.json
src/Sannel.Bots.Pear/Controllers/: HomeController.cs
src/Sannel.Bots.Pear/Models/: ErrorViewModel.cs
src/Sannel.Bots.Pear/Properties/: launchSettings.json
src/Sannel.Bots.Pear/Views/: _ViewImports.cshtml
src/Sannel.Bots.Pear/Views/Shared/: _Layout.cshtml
src/libcamera_net/: CMakeLists.txt
